# riemann-c-client

./: .drone.yml  .gitignore  CODE_OF_CONDUCT.md  Makefile.am  NEWS.md  README.md  configure.ac  meson.build  meson_options.txt
debian/: .gitignore  changelog  control  copyright  gbp.conf  libriemann-client0.lintian-overrides  libriemann-client0.symbols  rules  watch
debian/tests/: control  libriemann  setup.sh  symver
docs/: API.md
lib/riemann/: client.c  meson.build  riemann-client.pc.in
lib/riemann/proto/: meson.build
m4/: mbedtls.m4
src/: cmd-send.c  meson.build  riemann-client.1  riemann-client.c
tests/: check_client.c  check_libriemann.c  check_networked.c  check_simple.c  tests.h
tests/etc/: gen-certs.sh  riemann.config
